<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Green Link</string>
    <string name="logo_desc">Wellcome Pal</string>
    <string name="signin_suggest">Sign_in to continue</string>
    <string name="AccountHint">Email/Phone Number</string>
    <string name="PasswordHint">Password</string>
    <string name="signin">Sign in</string>
    <string name="register">Register</string>
    <string name="register_suggest">Make a new account ?</string>
    <string name="google_suggest">Already Have Google Account ?</string>
</resources>